[package]
name = "oxirs-gql"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "GraphQL façade for OxiRS with automatic schema generation from RDF ontologies"
keywords = ["graphql", "rdf", "semantic-web", "api", "federation"]
categories = ["web-programming", "api-bindings", "database"]
rust-version.workspace = true

[dependencies]
# oxigraph.workspace = true  # REMOVED: Using oxirs-core instead
oxirs-core.workspace = true
juniper.workspace = true
juniper_hyper.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util = { version = "0.1.17", features = ["full"] }
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
urlencoding = "2.1.3"
reqwest = { version = "0.12.23", features = ["json"] }
regex = "1.11.3"
fastrand = "2.3.0"
sysinfo.workspace = true
num_cpus.workspace = true

# Distributed caching
redis = { version = "0.27.6", features = ["async-std-comp"] }
lru = "0.16.1"
flate2 = "1.1.2"

# WebSocket support for subscriptions
tokio-tungstenite.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
futures.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
default = []
graphiql = []

[[bin]]
name = "oxirs-gql"
path = "src/main.rs"

[[bin]]
name = "generate-docs"
path = "src/bin/generate_docs.rs"

