[package]
name = "oxirs-cluster"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Raft-backed distributed dataset for high availability and horizontal scaling"
keywords = ["distributed", "raft", "clustering", "consensus", "rdf"]
categories = ["database", "network-programming", "concurrency"]
readme = "README.md"
rust-version.workspace = true

[dependencies]
oxirs-core.workspace = true

# SciRS2 dependencies for distributed processing with full feature support
scirs2-cluster = { workspace = true }
scirs2-optimize = { workspace = true }
scirs2-stats = { workspace = true }
scirs2-graph = { workspace = true }
scirs2-core = { workspace = true, features = ["random", "array", "parallel", "simd", "profiling"] }
# oxirs-tdb = { path = "../oxirs-tdb" }  # Temporarily commented out due to compilation issues
openraft = { workspace = true, optional = true }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true
reqwest = { workspace = true }
futures.workspace = true
num_cpus.workspace = true
rayon.workspace = true  # Parallel processing for SIMD-accelerated operations

# Byzantine fault tolerance dependencies
sha2.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
rand = "0.9"  # Required by ed25519-dalek for key generation
# Note: For other random functionality, use scirs2_core::random

# MVCC dependencies
dashmap.workspace = true
chrono.workspace = true
parking_lot.workspace = true

# TLS and encryption dependencies
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
rcgen.workspace = true
webpki-roots.workspace = true
ring.workspace = true
aes-gcm.workspace = true
x25519-dalek = "2.0"
base64.workspace = true

# Compression and serialization dependencies
flate2.workspace = true
oxiarc-zstd.workspace = true
oxiarc-lz4.workspace = true
xz2 = "0.1"  # LZMA compression for high-ratio compression
crc32fast.workspace = true
snap.workspace = true
oxicode.workspace = true  # Replaces bincode per COOLJAPAN Policy
rmp-serde.workspace = true
ciborium.workspace = true

# Storage dependencies
lmdb = "0.8"
memmap2.workspace = true

# OpenTelemetry for distributed tracing
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# Alerting and monitoring dependencies
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
slack-hook2 = "0.10"

# Web dashboard dependencies
axum = { workspace = true, features = ["macros"] }
tower.workspace = true
tower-http = { workspace = true, features = ["cors", "compression-gzip"] }

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
proptest.workspace = true

[features]
default = []
raft = ["openraft"]
bft = []
test-support = []
leak_detection = []
cuda = []   # GPU acceleration with CUDA (NVIDIA)
metal = []  # GPU acceleration with Metal (Apple Silicon)

[package.metadata.docs.rs]
# lmdb requires system library, but is always enabled (non-optional)
# This crate may fail on docs.rs due to lmdb C library requirement
# Consider making lmdb optional in the future
rustdoc-args = ["--cfg", "docsrs"]

