[package]
name = "oxirs-tdb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Apache Jena TDB/TDB2 compatible RDF storage engine with B+Tree indexes"
keywords = ["rdf", "sparql", "storage", "database", "tdb"]
categories = ["database", "data-structures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core
oxirs-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# SciRS2 Integration
scirs2-core = { workspace = true, features = ["profiling", "parallel"] }

# Storage
memmap2.workspace = true
parking_lot.workspace = true
dashmap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
oxicode.workspace = true  # Replaces bincode per COOLJAPAN Policy

# Utilities
log = "0.4"
bytes = { workspace = true }
byteorder = "1.5"
crc32fast.workspace = true
chrono.workspace = true

# Async I/O
tokio = { workspace = true, features = ["fs", "io-util", "rt", "sync"] }
futures.workspace = true
tantivy.workspace = true
geo.workspace = true
rstar.workspace = true
geojson.workspace = true
wkt.workspace = true
oxiarc-lz4.workspace = true
oxiarc-zstd.workspace = true
snap.workspace = true
brotli.workspace = true

flate2.workspace = true

# Encryption
aes-gcm.workspace = true
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2.workspace = true

# UUID generation
uuid.workspace = true

# Unix system calls (for madvise, mlock)
[target.'cfg(unix)'.dependencies]
libc.workspace = true

# Optional: io_uring support (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.5", optional = true }

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
proptest.workspace = true
env_logger = "0.11"
# Use scirs2-core::random instead of rand (see CLAUDE.md)

[[bench]]
name = "bloom_filter_benchmark"
harness = false

# Future benchmarks
# [[bench]]
# name = "btree_bench"
# harness = false
#
# [[bench]]
# name = "index_bench"
# harness = false
#
# [[bench]]
# name = "query_bench"
# harness = false

[[bench]]
name = "storage_bench"
harness = false
