[package]
name = "oxirs-tsdb"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Time-series optimizations for OxiRS semantic web platform"
keywords = ["time-series", "iot", "compression", "rdf", "sparql"]
categories = ["database", "compression", "algorithms"]
readme = "README.md"
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
oxirs-core.workspace = true
oxirs-tdb.workspace = true
scirs2-core.workspace = true

tokio = { workspace = true, features = ["fs", "io-util", "time", "sync", "rt-multi-thread"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

chrono = { workspace = true, features = ["serde"] }
arrow = { workspace = true, features = ["prettyprint"], optional = true }
parquet = { workspace = true, features = ["arrow"], optional = true }
crc32fast = { workspace = true }
bit-vec.workspace = true
oxiarc-lz4 = { workspace = true }
lru.workspace = true
humantime-serde.workspace = true

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
tokio-test.workspace = true

[features]
default = ["compression"]
compression = []
arrow-export = ["arrow", "parquet"]

[[bench]]
name = "write_throughput"
harness = false

[[bench]]
name = "query_performance"
harness = false

[[bench]]
name = "compression_ratio"
harness = false
