[package]
name = "oxirs-tsdb"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Time-series optimizations for OxiRS semantic web platform"
keywords = ["time-series", "iot", "compression", "rdf", "sparql"]
categories = ["database", "compression", "algorithms"]
readme = "README.md"
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
oxirs-core.workspace = true
oxirs-tdb.workspace = true
scirs2-core.workspace = true

tokio = { workspace = true, features = ["fs", "io-util", "time", "sync", "rt-multi-thread"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

chrono = { workspace = true, features = ["serde"] }
arrow = { workspace = true, features = ["prettyprint"], optional = true }
parquet = { workspace = true, features = ["arrow"], optional = true }
duckdb = { workspace = true, optional = true, features = ["bundled", "vtab-arrow", "appender-arrow"] }
crc32fast = { workspace = true }
bit-vec.workspace = true
oxiarc-lz4 = { workspace = true }
lru.workspace = true
humantime-serde.workspace = true

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
tokio-test.workspace = true

[features]
default = ["compression"]
compression = []
arrow-export = ["arrow", "parquet"]
# GPU-accelerated aggregations.  When enabled, scirs2-core's `gpu` module is
# activated and GpuAggregator dispatches to real GPU kernels on supported
# hardware; otherwise every call falls back silently to the CPU path.
gpu = ["scirs2-core/gpu"]
# DuckDB integration. Requires `duckdb` crate which has C dependencies (libduckdb
# is bundled and built from source). Default off per COOLJAPAN Pure Rust Policy.
# Implies `arrow-export` because the bridge uses Arrow `RecordBatch` for zero-copy
# data exchange with DuckDB's vtab-arrow engine.
duckdb = ["dep:duckdb", "arrow-export"]

[[bench]]
name = "write_throughput"
harness = false

[[bench]]
name = "query_performance"
harness = false

[[bench]]
name = "compression_ratio"
harness = false
