[package]
name = "oxirs-tsdb"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Time-series optimizations for OxiRS semantic web platform"
keywords = ["time-series", "iot", "compression", "rdf", "sparql"]
categories = ["database", "compression", "algorithms"]
readme = "README.md"
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
# humantime-serde is used via string attribute `#[serde(with = "humantime_serde")]`
# in src/config.rs, which cargo-machete cannot detect.
ignored = ["humantime-serde"]

[dependencies]
oxirs-core.workspace = true
scirs2-core.workspace = true

tokio = { workspace = true, features = ["fs", "io-util", "time", "sync", "rt-multi-thread"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

chrono = { workspace = true, features = ["serde"] }
arrow = { workspace = true, features = ["prettyprint"], optional = true }
parquet = { workspace = true, features = ["arrow"], optional = true }
crc32fast = { workspace = true }
bit-vec.workspace = true
lru.workspace = true
humantime-serde.workspace = true
oxiarc-snappy.workspace = true
oxiarc-deflate.workspace = true
reqwest.workspace = true

thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
wiremock.workspace = true

[features]
default = ["compression"]
compression = []
arrow-export = ["arrow", "parquet"]
# GPU-accelerated aggregations.  When enabled, scirs2-core's `gpu` module is
# activated and GpuAggregator dispatches to real GPU kernels on supported
# hardware; otherwise every call falls back silently to the CPU path.
gpu = ["scirs2-core/gpu"]
# NOTE: The former `duckdb` feature (which pulled the C `libduckdb-sys` via the
# `duckdb` crate) has been removed per COOLJAPAN Pure Rust Policy v2. The DuckDB
# ↔ TSDB bridge now lives in the `publish = false` crate
# `oxirs-tsdb-adapter-duckdb`; depend on it directly to use embedded DuckDB SQL.

[[bench]]
name = "write_throughput"
harness = false

[[bench]]
name = "query_performance"
harness = false

[[bench]]
name = "compression_ratio"
harness = false
