[package]
name = "oxirs-canbus"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CANbus/J1939 protocol support for OxiRS semantic web platform"
keywords = ["canbus", "automotive", "j1939", "rdf", "dbc"]
categories = ["network-programming", "embedded", "database"]
rust-version.workspace = true

[dependencies]
oxirs-core.workspace = true
oxirs-stream.workspace = true
scirs2-core.workspace = true

tokio = { workspace = true, features = ["net", "sync", "time", "rt-multi-thread"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
criterion.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
socketcan = "3.3"

[features]
default = []
j1939 = []

[[bench]]
name = "canbus_performance"
harness = false
